--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -91,7 +91,7 @@
 
            <h1 class="content-text-header">Y</h1>
 		<ul style="list-style: none;">
-			<li>Youth Data Archive</li>
+			<li><a href="yda.html">Youth Data Archive</a></li>
 			<li><a href="motivation.html">Youth Development and Motivation</a></li>
 			<li><a href="yell.html">Youth Engaged in Leadership and Learning (YELL)</a></li>
 			<li><a href="yim">Youth in the Middle (YiM)</a></li>
