--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@ document.createElement("article" );
 				<div class="feature_text">
 					&nbsp;<br>
 					<ul class="pdf">
-						<li><a href="#">How to Save Children &raquo;</a></li>
-						<li><a href="#">Leadership in Kindergarten &raquo;</a></li>
-						<li><a href="#">Babysitters: Friends or Foes? &raquo;</a></li>
-						<li><a href="#">Parents: They Were Kids Too, Once &raquo;</a></li>
+						<li><a href="/resources/publications/JGC_IB_SFUSDMathArticulation2011.pdf" class="link-no-underline">Math Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
+						<li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" class="link-no-underline">Community-Based After School Programs and Youth Physical Fitness</a></li>
+						
 					</ul>
 					&nbsp;<br>
 					<p>
@@ -109,23 +108,26 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						&nbsp;<br>
-						Our Redwood City partner, X, did this really neat thing
+						Redwood City 2020’s Immigrant Youth Action Team (IYAT) increases support for immigrant youth.
 					</p>
 					<p>
-						<a href="#">More...</a>
+					<a href="/partners/highlights.html">Learn More</a>	
 					</p>
 				</div>
 			</div>
 			<div class="feature">
 				<div class="feature_title">
 					<span id="blog">
-					        JGC Blog	
+					        News & Events	
 					</span>
 				</div>
 				<div class="feature_text">
 					<p>
 						&nbsp;<br>
-						We work together...
+						<ul>
+						<li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
+						<li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
+						</ul>
 					</p>
 					<p>
 						<a href="http://gardnercenter.wordpress.com">More...</a>
@@ -147,8 +149,9 @@ document.createElement("article" );
 				<div class="feature_text">
                                         &nbsp;<br>
 					<ul class="data">
-						<li><a href="#">A very helpful program description</a></li>
+						<li><a href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a></li>
 						<li><a href="http://jgcnet.stanford.edu">Map of EPA comunity programs</a></li>
+<li><a href="http://johnwgardnertestsite.pbworks.com/w/page/13471102/BASICS%20Toolkit">BASICS Toolkit: Building, Assessing, Sustaining, and Improving Community Schools</a></li>
 					</ul>
 				</div>
 			</div>
