--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -15,6 +15,11 @@
 <li>Redwood City School District</li>
 <li>San Mateo County Office of Education</li>
 </ul>
+
+<h1 class="content-text-header">Publication</h1>
+<ul>
+<li><a href="/resources/publications/JGC_IB_RWCPreschool2011.pdf" class="link-no-underline">Educational Outcomes for Preschool for All Participants in Redwood City School District</a></li>
+</ul>
     
     </div> <!--end right side box div-->
     </aside>
