--- a/our_work/content-saludamerica.html
+++ b/our_work/content-saludamerica.html
@@ -20,6 +20,12 @@ A Project of Salud America!</h1>
 <li>Riekes Center</li>
 <li>Sequoia YMCA</li>
 </ul>
+<br>
+
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" class="link-no-underline">Community-Based After School Programs and Youth Physical Fitness</a></li>
+</ul>
     </div> <!--end right side box div-->
     </aside>
 
