--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -6,6 +6,39 @@
    <h1 class="title-page-header-big">Youth Engaged in Leadership and Learning (YELL)</h1>
 
 <br>
+
+<aside>
+    <div class="right-side-box">
+<h1 class="title-page-header-big">YELL Curriculum, 2nd Edition</h1>
+<br>
+<p>This curriculum is designed for school, program, and community leaders to support authentic youth participation, promote effective policies and practices to strengthen communities, and support young people's personal growth.</p>
+<br>
+<p>For a hard copy (including binder) of the YELL curriculum, please contact Marianne Chatterton at <a href="mailto: mfchatte@stanford.edu">mfchatte@stanford.edu</a> for details. Cost is $40 (including shipping) per hard copy.</p>
+<br>
+<p>To download the handbook for free, please click on the following links for individual sections (.pdf opens in new browser windows):</p>
+<br>
+<ul>
+<li><a href="/our_work/yell/YELL.0712.Intro.final.pdf">Introduction and Table of Contents</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.Unit1.final.pdf">Unit 1 - Communication</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.Unit2.final.pdf">Unit 2 - Leadership</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.Unit3.final.pdf">Unit 3 - Research and Action</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.appendix1.final.pdf">Appendix 1 - Senior Research Project</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.appendix2.final.pdf">Appendix 2 - Community Youth Development and YELL</a></li>
+
+<li><a href="/our_work/yell/YELL.0712.appendix3.final.pdf">Appendix 3 - Team Builders</a></li>
+</ul>
+<br>
+<p>Please take a moment to let us know who you are and to share your response to this tool. We value your feedback. Please send your comments to Mary Hofstedt at <a href="hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
+  
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 <span class="content-bold">What is YELL?</span>
 <p>YELL is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The JGC’s YELL Handbook can help you to:</p>
 <br>
