--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -5,8 +5,9 @@
         <div class="jgc-content-feature-item-left">
                                                                                                         
 <h1 class="title-page-header-big">Local Partners</h1>
+(JGC Project listed in bullets) <br>
 <br>
-A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#S">S</a> <a href="#T">T</a> U V W X Y Z
+<a name="#A">A</a> <a name="#B">B</a> <a name="#C">C</a> D E F G <a href="#H">H</a> I J K L M <a name="#N">N</a> O <a href="#P">P</a> Q R <a href="#S">S</a> <a href="#T">T</a> U V W X Y Z
 <br><br>
 <a class="header-link" href=" http://advocatesfc.org/" target="_blank">Advocates for Children, San Mateo County</a><br>
 <p>Each year, 600-800 San Mateo County children enter the foster care system as a result of abuse and neglect. Advocates for Children trains and supports Court Appointed Special Advocate volunteers (CASA) who mentor and speak up for these children.</p>
@@ -23,7 +24,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <li><a href="/our_work/csri.html" target="_blank">Community Schools Resource Initiative (CSRI)</a></li>
 </ul>
 <br>
-
+<a name="B"></a>
 <a class="header-link" href=" http://www.bgcp.org/" target="_blank">Boys and Girls Clubs of the Peninsula</a><br>
 <p>The Boys & Girls Clubs of the Peninsula provides places where young people aged 6-18 are welcome and can belong after school and all day during the summer. At each of the Club's seven sites located in the most challenged areas of Menlo Park, East Palo Alto and Redwood City, California, trained and caring staff and a cadre of volunteers work through a broad range of programs to guide and inspire youth to develop the attitudes and life skills they need to thrive.</p>
 <br>
@@ -39,7 +40,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <li><a href="/our_work/mapping.html" target="_blank">East Palo  Alto Mapping Usability Study</a></li>
 </ul>
 <br>
-
+<a name="C"></a>
 <a class="header-link" href=" http://www.csba.org/" target="_blank">California School Boards Association</a>
 <br>
 <p>The California School Boards Association is a collaborative group of virtually all of the state’s more than 1,000 school districts and county offices of education. CSBA brings together school governing boards and their districts and county offices on behalf of California’s children. CSBA is a member-driven association that supports the governance team — school board members, superintendents and senior administrative staff — in its complex leadership role. CSBA develops, communicates and advocates the perspective of California school districts and county offices of education.</p>
@@ -108,7 +109,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 </ul>
 <br>
 
-
+<a name="N"></a>
 <a class="header-link" href=" http://www.newdayforlearning.org/" target="_blank">New Day for Learning</a><br>
 <p>New Day for Learning is not a curriculum or one-size fits all program; it's a 21st century vision for learning that builds on a foundation of core academics by leveraging community resources to incorporate strategies such as hands-on learning, working in teams and problem solving. Many programs that take place before the school day, after school and during the summer are already using these innovative learning approaches to engage students and increase their chances for success.</p>
 <br>
