--- a/resources/links.html
+++ b/resources/links.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-leadership_capacity.html" -->
+<!--#include virtual="content-links.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
