--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -6,6 +6,68 @@
          <h1 class ="title-page-header-big"> The Youth Data Archive </h1>
 
 <br>
+<aside>
+    <div class="right-side-box">
+
+<h1 class="content-text-header">YDA Projects</h1>
+<ul>
+<li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
+<li><a href="/our_work/english_learner.html">English Learner Analysis</a></li>
+<li><a href="/our_work/fitness_achievement.html">Physical Fitness and Academic Achievement in Redwood City</a></li>
+<li><a href="/our_work/pfa.html">Preschool for All </li>
+<li><a href="/our_work/community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
+<li><a href="/our_work/saludamerica.html">Salud America</a></li>
+<li><a href="/our_work/bts.html">San Francisco Bridge to Success</a></li>
+<li><a href="/our_work/research_consortium.html">San Francisco Research Consortium</a> </li>
+<li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>
+<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/motivation.html">Youth Development and Motivation</a></li>
+</ul>
+<br>
+<h1 class="content-text-header">Active YDA Partners</h1>
+<span class="content-bold">San Francisco City and County </span><br>
+<ul>
+<li>City College of San Francisco</li>
+<li>San Francisco Department of Children, Youth and Their Families </li>
+<li>San Francisco Unified School District</li>
+</ul>
+<br>
+
+<span class="content-bold">San Mateo County</span><br>
+<ul>
+<li>Cabrillo Unified School District</li>
+<li>City of Redwood City</li>
+
+<ul>
+<li>Library</li>
+<li>Parks, Recreation and Community Services</li>
+<li>Police Department (PAL) </li>
+<li>Project READ</li>
+</ul>
+</ul>
+<ul>
+<li>Redwood City School District</li>
+<li>San Mateo County Community College District</li>
+<li>San Mateo County Community-Based Organizations</li>
+</ul>
+<ul>
+<li>Boys & Girls Clubs of the Peninsula</li>
+<li>Peninsula Bridge</li>
+<li>Riekes Center</li>
+<li>Sequoia YMCA</li>
+<li>SPARK</li>
+</ul>
+<ul>
+<li>San Mateo County Health System</li>
+
+<li>San Mateo County Human Services Agency</li>
+
+<li>San Mateo County Office of Education</li>
+
+<li>Sequoia Union High School District</li>
+</ul>
+</aside>
+<br>
 
 <h1 class="content-text-header">What is the Youth Data Archive (YDA)? </h1>
 
@@ -55,73 +117,13 @@ in development in Santa Clara, and Alameda Counties as well. For more informatio
 
 contact Kara Dukakis, Associate Director, John W. Gardner Center, at (650) 721.2971 or
 
-<a href= "mailto:kdukakis@stanford.edu" >kdukakis@stanford.edu</a>
+<a href= "mailto:kdukakis@stanford.edu">kdukakis@stanford.edu.</a>
 
 </p>
 
 <br>
 
-<h1 class="content-text-header">Active YDA Partners</h1>
 
-
-<br>
-
- 
-<span class="content-bold">San Francisco City and County </span><br>
-
-City College of San Francisco<br>
-
-San Francisco Department of Children, Youth and Their Families <br>
-
-San Francisco Unified School District<br>
-
-<br>
-
- 
-
-<span class="content-bold">San Mateo County</span><br>
-
-Cabrillo Unified School District<br>
-
-City of Redwood City<br>
-
-<ul>
-
-<li>Library</li>
-
-<li>Parks, Recreation and Community Services</li>
-
-<li>Police Department (PAL) </li>
-
-<li>Project READ</li>
-</ul>
-<p>Redwood City School District</p>
-
-<p>San Mateo County Community College District</p>
-
-<p>San Mateo County Community-Based Organizations</p>
-
-<ul>
-
-<li>Boys & Girls Clubs of the Peninsula</li>
-
-<li>Peninsula Bridge</li>
-
-<li>Riekes Center</li>
-
-<li>Sequoia YMCA</li>
-
-<li>SPARK</li>
-
-</ul>
-
-San Mateo County Health System<br>
-
-San Mateo County Human Services Agency<br>
-
-San Mateo County Office of Education<br>
-
-Sequoia Union High School District<br>
 
          </div>
 
