wired up the content

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -41,7 +41,7 @@
               <a href="/about_jgc/team.html">Our Team</a>
             </li>
             <li class="current">
-              <a href="#ab">At Stanford</a>
+              <a href="#">At Stanford</a>
               <ul>
                 <li>
                   <a href="#aa">Principles of University-Community Partnership</a>
@@ -77,13 +77,13 @@
             <li>
               <a href="#aa">Research</a>
               <ul>
-                <li class="current"><a href="#">By Project</a></li>
-                <li><a href="#">By Topic</a></li>
+                <li class="current"><a href="/our_work/allwork.html">By Project</a></li>
+                <li><a href="/our_work/topic.html">By Topic</a></li>
                 <li><a href="/our_work/yda.html">Youth Data Archive (YDA)</a></li>
               </ul>
             </li>
             <li>
-              <a href="#aa">Leadership Development & Capacity Building</a>
+              <a href="/our_work/capacity_building.html">Leadership Development & Capacity Building</a>
             </li>
             <li>
               <a href="/our_work/allwork.html">Browse All Work</a>
@@ -97,8 +97,8 @@
           <ul>
             <li class="current"><a href="/partners/local.html">Local</a></li>
             <li><a href="/partners/national.html">National</a></li>
-            <li><a href="#aba">Highlights</a></li>
-            <li><a href="#aba">Become a Partner</a></li>
+            <li><a href="/partners/highlights.htm/partners/highlights.htmll">Highlights</a></li>
+            <li><a href="/partners/become_partner.html">Become a Partner</a></li>
           </ul>
         </li>
 
@@ -106,9 +106,9 @@
           <a href="#ab">Resources</a>
           <ul>
             <li><a href="/resources/publications.html">Publications</a></li>
-            <li><a href="#">Tools</a></li>
-            <li><a href="#aba">Presentations</a></li>
-            <li><a href="#abb">Links</a></li>
+            <li><a href="/resources/tools.html">Tools</a></li>
+            <li><a href="#">Presentations</a></li>
+            <li><a href="/resources/links.html">Links</a></li>
           </ul>
         </li>
       </ul>
