cleaned up home page features area

--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-						&nbsp;<br>
-						<ul>
-						<li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
-						<li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
+						<ul class="news">
+              <li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
+              <li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
 						</ul>
 					</p>
 					<p>
