at stanford content added

--- a/about_jgc/content-stanford.html
+++ b/about_jgc/content-stanford.html
@@ -3,12 +3,32 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-           Left justified content goes here.<br>
-           Lots of great content!
-         </div>
 
-        <div class="jgc-content-feature-item-right">
-           Content you want on the right goes here.<br>
+          <h1 class="title-page-header-big">At Stanford </h1>
+          <br>
+
+          <p> Situated within the School of Education at Stanford University, JGC has access to the intellectual resources of one of the worlds leading research institutions and the ability to apply them to the Centers mission of effecting change to improve the lives of youth. </p>
+          <br>
+
+          <p>The JGC's connection to Stanford is central to how we work; JGC accelerates Stanford's leadership role in community development while JGC draws on the knowledge, expertise and resources of Stanford students and faculty in order to achieve its mission of youth development and community renewal.</p>
+          <br>
+
+          <span class="content-bold">University Connections</span>
+          <br>
+          <p>JGC engages Stanford students and faculty in both research and program-development activities.</p>
+          <br>
+          <span class="content-bold">Connecting Students to Community Youth Development Experiences</span>
+          <p>JGC provides student intern and volunteer positions, and connects Stanford service-learning courses to community-based research opportunities.</p>
+          <br>
+          <p>Through connections to our projects and our community partners, students deepen and ground academic concepts in real-world contexts, learn from practitioners and researchers in the field, and contribute their skills and knowledge to benefit community partners.</p>
+          <br>
+          <span class="content-bold">Providing Students with Research Opportunities</span> 
+          <p>We provide and facilitate student internships in collaboration with programs such as the Urban Studies Program, the Prevention Research Center, the Haas Center for Public Service and the Stanford Undergraduate Research Programs (SURP). JGC also prepares students to conduct community-based research as part of honors theses, research fellowships and dissertations.</p>
+          <br>
+          <span class="content-bold">Partnering in to Connect Research and Practice</span> 
+          <p>JGC staff and faculty partner with others in the School of Education, School of Medicine, and Haas Center for Public Service in joint research and community based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
+          <br> 
+
          </div>
 
        </div>
