--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					&nbsp;<br>
 					<ul class="pdf">
-						<li><a href="/resources/publications/JGC_IB_SFUSDMathArticulation2011.pdf" class="link-no-underline">Math Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
-						<li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" class="link-no-underline">Community-Based After School Programs and Youth Physical Fitness</a></li>
+						<li><a href="/resources/publications/JGC_IB_Motivation2010.pdf"> Practices that Promote Middle School Students’ Motivation and Achievement</a></li>
+						<li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" >Community-Based After School Programs and Youth Physical Fitness</a></li>
 						
 					</ul>
 				</div>
