some missing files added

--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -33,7 +33,7 @@
     </aside>
           <h1 class="title-page-header-big">Leadership Development</h1>
 
-<p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who “can work in networks of responsibility” as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
+<p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts</p>
 <br>  
 
 <p>We conduct leadership development through facilitation of initiatives and trainings that include:</p>
@@ -53,7 +53,7 @@
 <br>
 <ol> 
 <li>Use data to drive action. (Youth Data Archive, College Readiness Indicator Systems)</li>
-<li>Inquire deeply into “what works for youth” in and across settings and systems(Implementation Research)</li>
+<li>Inquire deeply into “what works for youth” in and across settings and systems (Implementation Research)</li>
 <li>Embed youth development as a city-wide approach to create thriving environments for youth (Community Youth Development Initiative)</li>
 <li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (Community School Resource Initiative) </li>
 </ol>
